Stworzony modół ze zdjęciami

--- a/index.html
+++ b/index.html
@@ -36,9 +36,17 @@
 <!-- images -->
   <section>
     <div class="container-images">
-      <div class="image">1</div>
-      <div class="image">1</div>
-      <div class="image">1</div>
+      <div class="image image1">
+        <div class="pasek">Chair CLAIR</div>
+      </div>
+
+      <div class="image image2">
+        <div class="pasek">Chair MARGARITA</div>
+      </div>
+      <div class="third-field">
+        <h2>Find all inputs</h2>
+        <div class="kreska"></div>
+      </div>
     </div>
   </section>
 
