--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
 
 <!-- price list -->
   <section>
-
+    <div class="container-price">
+      <h2>CENNIK</h2>
+      <div class="kreska2"></div>
+      <div class="price-field">BASIC PLAN
+        <div class="circle"></div>
+        <div class="wheel"></div>
+        <div class="price">85<sup>99</sup><br>
+          <p>PLN/MSC</p></div>
+        
+      </div>
+      <div class="price-field">STANDARD PLAN
+        <div class="circle"></div>
+        <div class="wheel"></div>
+        <div class="price">95<sup>99</sup><br>
+          <p>PLN/MSC</p></div>
+      </div>
+      <div class="price-field">ADVANCE PLAN
+        <div class="circle"></div>
+        <div class="wheel"></div>
+        <div class="price">211<sup>00</sup><br>
+          <p>PLN/MSC</p></div>
+      </div>
+    </div>
   </section>
 
 <!-- form -->
